Continue the amazon bedrock samples, failed in langchain example.

--- a/dl24-bedrock-deepdive.ipynb
+++ b/dl24-bedrock-deepdive.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "50924eae-6579-46fe-8cd9-72f68fecc0c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Multimodal RAG with Claude3"
+    "## amazon-bedrock-samples: multi-modal-rag-claude3-sonnet-langchain.ipynb"
    ]
   },
   {
@@ -550,8 +550,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "c1348ee4-4e41-4510-8cc9-76c7bc78aaf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create image summaries using Claude3 Sonnet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6c60b0ab-fb84-4562-8150-78725b69a565",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import pprint\n",
+    "from botocore.client import Config\n",
+    "import json\n",
+    "from langchain_community.chat_models.bedrock import BedrockChat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "93139800-5aaf-426b-89f5-8c4de2956a15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "us-west-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "pp = pprint.PrettyPrinter(indent=2)\n",
+    "modelId = 'anthropic.claude-3-sonnet-20240229-v1:0'\n",
+    "session = boto3.session.Session()\n",
+    "region = session.region_name\n",
+    "bedrock_config = Config(connect_timeout=120, read_timeout=120, retries={'max_attempts': 0})\n",
+    "bedrock_client = boto3.client('bedrock-runtime', region_name=region)\n",
+    "print(region)\n",
+    "accept = 'application/json'\n",
+    "contentType='application/json'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4e450c76-7e97-4211-b6fa-f6b337b50c69",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'create_model' from 'langchain_core.runnables.utils' (/Users/yfzhu/opt/anaconda3/envs/py312/lib/python3.12/site-packages/langchain_core/runnables/utils.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchat_models\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbedrock\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BedrockChat\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mschema\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmessages\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m HumanMessage, SystemMessage\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/py312/lib/python3.12/site-packages/langchain/schema/__init__.py:34\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moutputs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     27\u001b[0m     ChatGeneration,\n\u001b[1;32m     28\u001b[0m     ChatResult,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     31\u001b[0m     RunInfo,\n\u001b[1;32m     32\u001b[0m )\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mprompt_values\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PromptValue\n\u001b[0;32m---> 34\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mprompts\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BasePromptTemplate, format_document\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mretrievers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BaseRetriever\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstores\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BaseStore\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/py312/lib/python3.12/site-packages/langchain_core/prompts/__init__.py:27\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"**Prompt** is the input to the model.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03mPrompt is often constructed\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     25\u001b[0m \n\u001b[1;32m     26\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m  \u001b[38;5;66;03m# noqa: E501\u001b[39;00m\n\u001b[0;32m---> 27\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mprompts\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbase\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BasePromptTemplate, format_document\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mprompts\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchat\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     29\u001b[0m     AIMessagePromptTemplate,\n\u001b[1;32m     30\u001b[0m     BaseChatPromptTemplate,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     35\u001b[0m     SystemMessagePromptTemplate,\n\u001b[1;32m     36\u001b[0m )\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mprompts\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfew_shot\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     38\u001b[0m     FewShotChatMessagePromptTemplate,\n\u001b[1;32m     39\u001b[0m     FewShotPromptTemplate,\n\u001b[1;32m     40\u001b[0m )\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/py312/lib/python3.12/site-packages/langchain_core/prompts/base.py:31\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrunnables\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RunnableConfig, RunnableSerializable\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrunnables\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfig\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ensure_config\n\u001b[0;32m---> 31\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrunnables\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m create_model\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m TYPE_CHECKING:\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdocuments\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Document\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'create_model' from 'langchain_core.runnables.utils' (/Users/yfzhu/opt/anaconda3/envs/py312/lib/python3.12/site-packages/langchain_core/runnables/utils.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import io\n",
+    "import os\n",
+    "import base64\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "from langchain.chat_models.bedrock import BedrockChat\n",
+    "from langchain.schema.messages import HumanMessage, SystemMessage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94770d6f-b9f1-4f51-9393-f8980557d6bb",
+   "metadata": {},
+   "source": [
+    "## amazon-bedrock-samples: Claude3-Sonnet-Multimodal-Example.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "424c11b7-0580-4ff5-a246-623123cbf7f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import json\n",
+    "import base64\n",
+    "\n",
+    "bedrock_client = boto3.client('bedrock-runtime', region_name='us-west-2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "92336f22-37d9-475c-ae2a-ae4af90c3615",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_message(bedrock_runtime, model_id, messages, max_tokens, top_p, temp):\n",
+    "    body = json.dumps(\n",
+    "        {\n",
+    "            \"anthropic_version\": \"bedrock-2023-05-31\",\n",
+    "            \"max_tokens\": max_tokens,\n",
+    "            \"messages\": messages,\n",
+    "            \"temperature\": temp,\n",
+    "            \"top_p\": top_p\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    response = bedrock_runtime.invoke_model(body=body, modelId=model_id)\n",
+    "    response_body = json.loads(response.get('body').read())\n",
+    "\n",
+    "    return response_body"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b45b4ecb-4b60-487d-83d7-877e5c9038ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Process the jpeg image\n",
+    "\n",
+    "with open(\"img/animal.jpg\", \"rb\") as image_file:\n",
+    "    content_image = base64.b64encode(image_file.read()).decode('utf8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f619ebcd-a7bb-4745-874a-0f325d8d5660",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "message_mm = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": [\n",
+    "            {\n",
+    "                \"type\": \"image\", \n",
+    "                \"source\": {\n",
+    "                    \"type\": \"base64\", \n",
+    "                    \"media_type\": \"image/jpeg\",\n",
+    "                    \"data\": content_image\n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"type\": \"text\",\n",
+    "                \"text\": \"What is in this image?\"\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "]\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1b8a2f87-b5c2-4a3e-a3a9-4a2dd2066aeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'msg_01MhL2FietLR7wy1C5Mr5vog',\n",
+       " 'type': 'message',\n",
+       " 'role': 'assistant',\n",
+       " 'content': [{'type': 'text',\n",
+       "   'text': 'This image depicts three king penguins standing upright on what appears to be a rocky or sandy surface. King penguins are a large species of penguin easily recognizable by their distinctive coloring - they have black backs and heads, white bellies, orange patches on their ears and necks, and long, slender beaks.\\n\\nThese three penguins are posing in a line, with their bodies slightly arched and their beaks pointed upwards. The background is slightly blurred but suggests a coastal or beach-like environment. The lighting and colors in the image create a vibrant, almost artistic portrayal of these majestic seabirds in their natural habitat.'}],\n",
+       " 'model': 'claude-3-sonnet-28k-20240229',\n",
+       " 'stop_reason': 'end_turn',\n",
+       " 'stop_sequence': None,\n",
+       " 'usage': {'input_tokens': 1082, 'output_tokens': 146}}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_message(bedrock_client, model_id = \"anthropic.claude-3-sonnet-20240229-v1:0\", \n",
+    "                 messages=message_mm, max_tokens=1024, temp=0.5, top_p=0.9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21d35ca7-376b-4109-a01d-37fa32354c9f",
+   "metadata": {},
+   "source": [
+    "## amazon-bedrock-samples: best_practices_for_claude3_bedrock.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "752a5952-20bf-4369-989d-a26941e2f296",
    "metadata": {},
    "outputs": [],
    "source": []
