--- a/dl24-sagemaker-tests.ipynb
+++ b/dl24-sagemaker-tests.ipynb
@@ -334,9 +334,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p310",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda_pytorch_p310"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -348,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
